removed remaining fixed background styles on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -492,7 +492,7 @@ footer {
     font-size: 9vw;
   }
   .demon_bottom {
-    background-attachment: fixed;
+    // background-attachment: fixed;
     opacity: .85;
   }
   .circle1 {
